--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,7 +12,20 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+  
 }
+
+.links-left, .links-right {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+
+}
+
 
 .profile-image {
   background: rebeccapurple;
@@ -20,6 +33,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height:  48px;
+
 }
 
 .logo {
@@ -27,6 +41,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+
 }
 
 button {
@@ -35,6 +50,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+
 }
 
 a {
@@ -45,4 +61,10 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  padding: 0;
+  gap: 16px;
+  align-items: center;
+  margin: 0;
+
 }
