--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,6 +1,29 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  gap: 32px;
+  text-align: center;
 }
+
+.items {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 52px;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 200px;
+  align-items: center;
+}
+
+
 
 img {
   width: 100px;
@@ -11,6 +34,7 @@ img {
   font-size: 36px;
   font-weight: 900;
 }
+
 
 /* do not edit this footer */
 .footer {
@@ -24,3 +48,4 @@ img {
   justify-content: center;
   background: #eee;
 }
+
